--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,40 +8,38 @@
     <link rel="icon"  type=image/ico href="images/favicon.ico">
 </head>
 <body>
-    <div class="plateau">
-        <div class="bluebloc">
+    <section class="plateau">
+        <div class="bluebloc" id="snailblue">
             <img src="images/blue.jpg" alt="">
         </div>
-        <div class="redbloc">
+        <div class="redbloc" id="snailred">
             <img src="images/red.jpg" alt="">
         </div>
-        <div class="greenbloc">
+        <div class="greenbloc" id="snailgreen">
             <img src="images/green.jpg" alt="">
         </div>
-        <div class="purplebloc">
+        <div class="purplebloc" id="snailpurple">
             <img src="images/purple.jpg" alt="">
 
         </div>
-        <div class="orangebloc">
+        <div class="orangebloc" id="snailorange">
             <img src="images/orange.jpg" alt="">
 
         </div>
-        <div class="yellowbloc">
+        <div class="yellowbloc" id="snailyellow">
             <img src="images/yellow.jpg" alt="">
         </div>
 
-    </div>
+    </section>
 
-    <div class="color-case">
-        <div class="color-div">
-            <p>Dé</p>
-            <p class="color-code"></p>
+    <section class="color-case">
+        <div class="color-div1" id="Dice1">
+            <p class="dé">Dé</p>
         </div>
-        <div class="color-div">
-            <p>Dé</p>
-            <p class="color-code"></p>
+        <div class="color-div2" id="Dice2">
+            <p class="dé">Dé</p>
         </div>
-    </div>
+    </section>
 
     <footer class="footer">
         <h1>Générateur de couleurs</h1>
